# ReviewLens

./: .gitignore  BACKLOG.md  CLAUDE_CODE_BRIEF.md  COMPLIANCE_152FZ.md  Caddyfile  README.md  docker-compose.deploy.yml  docker-compose.prod.yml  docker-compose.scrapers.yml  docker-compose.server.example.yml  docker-compose.yml
.claude/: launch.json
.github/workflows/: ci.yml  deploy.yml
backend/: .env.example  Dockerfile  Dockerfile.playwright  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial.py  0002_user_deleted_at.py
backend/app/: main.py
backend/app/api/: analyses.py  auth.py  deps.py  me.py  payments.py
backend/app/core/: config.py  logging.py  plans.py  ratelimit.py  security.py
backend/app/db/: models.py  session.py
backend/app/llm/: openai_client.py  pipeline.py  prompts.py
backend/app/schemas/: api.py  result.py
backend/app/scrapers/: avito.py  base.py  megamarket.py  ozon.py  playwright_base.py  registry.py  wildberries.py  yandex.py
backend/app/scripts/: create_admin.py  create_test_user.py
backend/app/services/: analysis.py  emailer.py  payment.py  subscription.py  tinkoff.py
backend/app/workers/: queue.py  tasks.py  worker.py
backend/tests/: test_cost.py  test_payments.py  test_prompts_e2e.py  test_scraper.py
backend/tests/fixtures/: sample_reviews.json
deploy/: GITHUB_SECRETS.md  README.md  env.prod.example  env.test.example  nginx.conf
deploy/edge/: Caddyfile  (+1 more)
frontend/: .env.example  Dockerfile  Dockerfile.prod  index.html  nginx.conf  package-lock.json  package.json  vite.config.ts
(+30 files in other folders)
