[project]
name = "reviewlens-backend"
version = "0.1.0"
description = "ReviewLens — AI-анализ отзывов конкурентов на маркетплейсах"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.30",
    "alembic>=1.14",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "redis>=5.2",
    "rq>=2.0",
    "httpx>=0.28",
    "openai>=1.55",
    "email-validator>=2.2",
    "python-jose[cryptography]>=3.3",
    "bcrypt>=4.1",
    "yookassa>=3.5",
    "loguru>=0.7",
    "python-multipart>=0.0.12",
    "python-dateutil>=2.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "ruff>=0.8",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
